commit before adding whitematter

--- a/2.0-example.ipynb
+++ b/2.0-example.ipynb
@@ -2,41 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "# %matplotlib widget\n",
+    "%matplotlib qt\n",
     "import os\n",
     "import sys\n",
     "nb_dir = os.path.split(os.getcwd())[0]\n",
     "if nb_dir not in sys.path:\n",
-    "    sys.path.append(nb_dir)"
+    "    sys.path.append(nb_dir)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from cerebra_atlas_python.cerebra import CerebrA, setup_logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f5b7c1fc730>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xs, ys, zs = np.indices((32, 16, 32))\n",
+    "xs, ys, zs = xs*8, ys*8, zs*8\n",
+    "ax = plt.figure().add_subplot(projection='3d')\n",
+    "\n",
+    "ax.scatter(xs,ys,zs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from CerebrA import CerebrA, setup_logging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,70 +64,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]]], dtype=float32)"
+       "((256, 256, 256), 0.0, 102.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cerebra.volume_data"
+    "cerebra.volume_data.shape, cerebra.volume_data.min(), cerebra.volume_data.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def get_cmap(n, name='hsv'):\n",
+    "    '''Returns a function that maps each index in 0, 1, ..., n-1 to a distinct \n",
+    "    RGB color; the keyword argument name must be a standard mpl colormap name.'''\n",
+    "    return plt.cm.get_cmap(name, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 0, 'Z')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "import matplotlib.colors\n",
+    "ax = plt.figure().add_subplot(projection='3d')\n",
+    "\n",
+    "xs = []\n",
+    "ys = []\n",
+    "zs = []\n",
+    "cs = []\n",
+    "\n",
+    "norm=plt.Normalize(0,102)\n",
+    "cmap = get_cmap(102)\n",
+    "\n",
+    "for x in range(0,256,4):\n",
+    "    for y in range(0,256,4):\n",
+    "        for z in range(0,256,4):\n",
+    "            if cerebra.volume_data[x,y,z] != 0 and random.uniform(0,1)>0.7:\n",
+    "                xs.append(x)\n",
+    "                ys.append(y)\n",
+    "                zs.append(z)\n",
+    "                cs.append(cerebra.volume_data[x,y,z])\n",
+    "\n",
+    "ax.scatter(xs,ys,zs,c=cs,cmap=cmap)\n",
+    "ax.set_xlabel(\"X\")\n",
+    "ax.set_ylabel(\"Y\")\n",
+    "ax.set_zlabel(\"Z\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 0, 'Z')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "import matplotlib.colors\n",
+    "ax = plt.figure().add_subplot(projection='3d')\n",
+    "\n",
+    "xs = []\n",
+    "ys = []\n",
+    "zs = []\n",
+    "cs = []\n",
+    "\n",
+    "norm=plt.Normalize(0,102)\n",
+    "cmap = get_cmap(102)\n",
+    "\n",
+    "for x in range(80,180,4):\n",
+    "    for y in range(80,200,4):\n",
+    "        for z in range(50,200,4):\n",
+    "            if cerebra.volume_data[x,y,z] == 0 and random.uniform(0,1)>0.7:\n",
+    "                xs.append(x)\n",
+    "                ys.append(y)\n",
+    "                zs.append(z)\n",
+    "                cs.append(cerebra.volume_data[x,y,z])\n",
+    "\n",
+    "ax.scatter(xs,ys,zs,c=cs,cmap=cmap)\n",
+    "ax.set_xlabel(\"X\")\n",
+    "ax.set_ylabel(\"Y\")\n",
+    "ax.set_zlabel(\"Z\")"
    ]
   }
  ],
@@ -130,8 +204,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
