fixed cerebra in head instantiation

--- a/2.0-example.ipynb
+++ b/2.0-example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f5b7c1fc730>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f8606029250>"
       ]
      },
      "execution_count": 3,
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((256, 256, 256), 0.0, 102.0)"
+       "((256, 256, 256), 0.0, 103.0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Z')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import random\n",
@@ -126,10 +115,10 @@
     "norm=plt.Normalize(0,102)\n",
     "cmap = get_cmap(102)\n",
     "\n",
-    "for x in range(0,256,4):\n",
-    "    for y in range(0,256,4):\n",
-    "        for z in range(0,256,4):\n",
-    "            if cerebra.volume_data[x,y,z] != 0 and random.uniform(0,1)>0.7:\n",
+    "for x in range(0,256,1):\n",
+    "    for y in range(0,256,1):\n",
+    "        for z in range(0,256,1):\n",
+    "            if cerebra.volume_data[x,y,z] != 0 :\n",
     "                xs.append(x)\n",
     "                ys.append(y)\n",
     "                zs.append(z)\n",
@@ -138,12 +127,13 @@
     "ax.scatter(xs,ys,zs,c=cs,cmap=cmap)\n",
     "ax.set_xlabel(\"X\")\n",
     "ax.set_ylabel(\"Y\")\n",
-    "ax.set_zlabel(\"Z\")"
+    "ax.set_zlabel(\"Z\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +142,7 @@
        "Text(0.5, 0, 'Z')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
