--- a/3.0-tests.ipynb
+++ b/3.0-tests.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [DEBUG] 2023-09-07 20:22:44.458 pyplot - switch_backend: Loaded backend Qt5Agg version unknown.\n"
+      " [DEBUG] 2023-09-07 22:34:25.194 pyplot - switch_backend: Loaded backend Qt5Agg version unknown.\n"
      ]
     },
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<nibabel.freesurfer.mghformat.MGHImage at 0x7f041f79f4f0>"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cerebra.cerebra_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -122,12 +142,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>60.0</td>\n",
-       "      <td>Left Ventral Diencephalon</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>92.0</td>\n",
        "      <td>Left Basal Forebrain</td>\n",
@@ -151,9 +165,15 @@
        "      <td>Left Vermal lobules VIII-X</td>\n",
        "      <td>71</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>White Matter</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>102 rows × 3 columns</p>\n",
+       "<p>103 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -164,16 +184,16 @@
        "3           2006.0                 Right Entorhinal          36\n",
        "4           2007.0                   Right Fusiform          24\n",
        "..             ...                              ...         ...\n",
-       "97            60.0        Left Ventral Diencephalon          77\n",
        "98            92.0             Left Basal Forebrain          76\n",
        "99           630.0          Left Vermal lobules I-V         101\n",
        "100          631.0       Left Vermal lobules VI-VII          53\n",
        "101          632.0       Left Vermal lobules VIII-X          71\n",
+       "102            NaN                     White Matter         103\n",
        "\n",
-       "[102 rows x 3 columns]"
+       "[103 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,80 +205,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "80.5"
+       "array([[121, 159,  73],\n",
+       "       [121, 159,  74],\n",
+       "       [121, 159,  75],\n",
+       "       ...,\n",
+       "       [129, 183,  69],\n",
+       "       [129, 183,  70],\n",
+       "       [129, 183,  71]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "cerebra.get_points_from_region_id(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 256.0)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "import matplotlib.colors\n",
+    "ax = plt.figure().add_subplot(projection='3d')\n",
+    "\n",
+    "\n",
+    "region_ids = [3,5,2]\n",
+    "colors = [(0.2,0.2,0.6),(0.5,0.2,0.6),(0.2,0.3,0.1)]\n",
+    "\n",
+    "\n",
+    "# rid = 11\n",
+    "# region_ids = [rid, rid + 51]\n",
+    "# colors = [(0.2,0.2,0.6),(0.5,0.2,0.6)]\n",
+    "\n",
+    "name = \"\"\n",
+    "\n",
+    "for region_id, color in zip(region_ids, colors):\n",
+    "    points = cerebra.get_points_from_region_id(region_id).T\n",
+    "\n",
+    "    xs = points[0]\n",
+    "    ys = points[1]\n",
+    "    zs = points[2] \n",
+    "    cs = [color for i in range(len(xs))]\n",
+    "\n",
+    "    ax.scatter(xs,ys,zs,c=cs)\n",
+    "    name += \" \" + cerebra.get_region_name_from_region_id(region_id) + \", \"\n",
+    "    \n",
+    "ax.set_title(name)\n",
+    "ax.set_xlabel(\"X\")\n",
+    "ax.set_ylabel(\"Y\")\n",
+    "ax.set_zlabel(\"Z\")\n",
+    "\n",
+    "\n",
+    "ax.set_xlim([0,256])\n",
+    "ax.set_ylim([0,256])\n",
+    "ax.set_zlim([0,256])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cerebra.brain_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cerebra.volume_data[138,123,123]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mindboggle ID</th>\n",
-       "      <th>Label Name</th>\n",
-       "      <th>CerebrA ID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Mindboggle ID, Label Name, CerebrA ID]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cerebra.get_region_name_from_point(128,128,128)"
    ]
@@ -272,91 +329,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  -1. ,    0. ,    0. ,  128.5],\n",
-       "       [   0. ,    0. ,    1. , -145.5],\n",
-       "       [   0. ,   -1. ,    0. ,  146.5],\n",
-       "       [   0. ,    0. ,    0. ,    1. ]])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cerebra.cerebra_img.affine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]]], dtype=float32)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.array(cerebra.cerebra_img.dataobj)"
    ]
@@ -366,7 +350,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.array(np.where(cerebra.volume_data == 2)).T"
+   ]
   },
   {
    "cell_type": "code",
