figuring out coordinate frame alignment. Included transform to move volume data from LIA to RAS

--- a/2.0-example.ipynb
+++ b/2.0-example.ipynb
@@ -2,15 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " [DEBUG] 2023-09-11 18:01:05.260 pyplot - switch_backend: Loaded backend Qt5Agg version unknown.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib qt\n",
     "import os\n",
     "import sys\n",
+    "import mne\n",
     "nb_dir = os.path.split(os.getcwd())[0]\n",
     "if nb_dir not in sys.path:\n",
     "    sys.path.append(nb_dir)\n",
@@ -19,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f8606029250>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f6be8b7ffd0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,12 +66,12 @@
     "xs, ys, zs = xs*8, ys*8, zs*8\n",
     "ax = plt.figure().add_subplot(projection='3d')\n",
     "\n",
-    "ax.scatter(xs,ys,zs)"
+    "# ax.scatter(xs,ys,zs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +90,7 @@
        "((256, 256, 256), 0.0, 103.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,13 +115,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256, 256, 256)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vol_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cerebra.volume_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0, 0.5, 'Y (A-P)')"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import random\n",
     "import matplotlib.colors\n",
+    "from einops import rearrange\n",
+    "\n",
+    "ax = plt.figure().add_subplot()\n",
+    "\n",
+    "ys = []\n",
+    "zs = []\n",
+    "cs = []\n",
+    "\n",
+    "norm=plt.Normalize(0,102)\n",
+    "cmap = get_cmap(102)\n",
+    "\n",
+    "vol_data = cerebra.volume_data\n",
+    "\n",
+    "vol_data = np.rot90(vol_data,-1, axes=(1,2))\n",
+    "# np.fliplr = \n",
+    "\n",
+    "\n",
+    "for y in range(0,256,1):\n",
+    "    for z in range(0,256,1):\n",
+    "        x=120\n",
+    "        if vol_data[x,y,z] != 0 and vol_data[x,y,z] != 103 :\n",
+    "            ys.append(y)\n",
+    "            zs.append(z)\n",
+    "            cs.append(vol_data[x,y,z])\n",
+    "\n",
+    "ax.scatter(zs,ys,c=cs,cmap=cmap)\n",
+    "ax.set_xlabel(\"Z (S-I)\")\n",
+    "ax.set_ylabel(\"Y (A-P)\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 256.0)"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "import matplotlib.colors\n",
+    "from einops import rearrange\n",
     "ax = plt.figure().add_subplot(projection='3d')\n",
     "\n",
     "xs = []\n",
@@ -115,20 +283,44 @@
     "norm=plt.Normalize(0,102)\n",
     "cmap = get_cmap(102)\n",
     "\n",
-    "for x in range(0,256,1):\n",
-    "    for y in range(0,256,1):\n",
-    "        for z in range(0,256,1):\n",
-    "            if cerebra.volume_data[x,y,z] != 0 :\n",
+    "vol_data = cerebra.volume_data\n",
+    "# vol_data = scipy.ndimage.rotate(cerebra.volume_data,90,(0,1))\n",
+    "# vol data is in LIA ([R-L][S-I][A-P])\n",
+    "# move to LAI ([R-L][A-P][S-I])\n",
+    "# vol_data_I = vol_data[:,:,:]\n",
+    "\n",
+    "# vol_data = rearrange(vol_data, 'a b c -> a c b')\n",
+    "\n",
+    "# vol_data = np.rot90(vol_data)\n",
+    "\n",
+    "# vol_data = np.fliplr(vol_data)\n",
+    "\n",
+    "# print(vol_data)\n",
+    "\n",
+    "# vol_data = np.flip(vol_data, axis=2)\n",
+    "\n",
+    "# vol_data = np.rot90(vol_data,-1, axes=(1,2))\n",
+    "\n",
+    "# vol_data = np.rot90(vol_data, 2, axes=(0,1))\n",
+    "\n",
+    "\n",
+    "for x in range(0,256,4):\n",
+    "    for y in range(0,256,4):\n",
+    "        for z in range(0,256,4):\n",
+    "            if vol_data[x,y,z] != 0  : #and vol_data[x,y,z] != 103\n",
     "                xs.append(x)\n",
     "                ys.append(y)\n",
     "                zs.append(z)\n",
-    "                cs.append(cerebra.volume_data[x,y,z])\n",
+    "                cs.append(vol_data[x,y,z])\n",
     "\n",
     "ax.scatter(xs,ys,zs,c=cs,cmap=cmap)\n",
-    "ax.set_xlabel(\"X\")\n",
-    "ax.set_ylabel(\"Y\")\n",
-    "ax.set_zlabel(\"Z\")\n",
-    "\n"
+    "ax.set_xlabel(\"X (L-R)\")\n",
+    "ax.set_ylabel(\"Y (A-P)\")\n",
+    "ax.set_zlabel(\"Z (S-I)\")\n",
+    "\n",
+    "ax.set_xlim([0,256])\n",
+    "ax.set_ylim([0,256])\n",
+    "ax.set_zlim([0,256])\n"
    ]
   },
   {
@@ -160,6 +352,8 @@
     "\n",
     "norm=plt.Normalize(0,102)\n",
     "cmap = get_cmap(102)\n",
+    "\n",
+    "vol_data = np.rot90(vol_data,-1, axes=(1,2))\n",
     "\n",
     "for x in range(80,180,4):\n",
     "    for y in range(80,200,4):\n",
@@ -197,5 +391,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
