--- a/notebooks/0.1-initial-transforms.ipynb
+++ b/notebooks/0.1-initial-transforms.ipynb
@@ -793,15 +793,8 @@
     "    if is_left_hemisphere(dat):\n",
     "        print(f\"{L= } is left brain for cerebra_volume_LIA\")\n",
     "        break\n",
-    "    else:\n",
-    "        print(f\"{L= } is right brain for cerebra_volume_LIA\")\n",
-    "        \n",
-    "# LIA:\n",
-    "# L = -126 is left brain\n",
-    "# L = -127 is right brain\n",
-    "\n",
-    "for R in range(124,140, 1):\n",
-    "    dat = cerebra_volume_RAS[R, :, :]\n",
+    "    else:import CerebrA\n",
+    "cerebra = ra_volume_RAS[R, :, :]\n",
     "    # If right hemisphere continue\n",
     "    if not is_left_hemisphere(dat):\n",
     "        print(f\"{R= } is right brain for cerebra_volume_RAS\")\n",
@@ -835,7 +828,8 @@
    ],
    "source": [
     "aff_adjusted = aff.copy()\n",
-    "aff_adjusted"
+    "aff_adjustedimport CerebrA\n",
+    "cerebra = "
    ]
   },
   {
