new plots + distribution of regions over source space

--- a/notebooks/3d_example.ipynb
+++ b/notebooks/3d_example.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "import os\n",
     "import sys\n",
-    "sys.path.append(\"/home/carlos/Carlos/cerebra-atlas-python\")"
+    "nb_dir = os.path.split(os.getcwd())[0]\n",
+    "if nb_dir not in sys.path:\n",
+    "    sys.path.append(nb_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'outer_skin', 2: 'outer_skull', 3: 'inner_skull'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cerebra.bem_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +68,14 @@
        " <Axes3D: xlabel='X (R)', ylabel='Y (A)', zlabel='Z (S)'>)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cerebra.plot_3d()"
+    "\n",
+    "cerebra.plot_3d(plot_bem=False,plot_src_space=True,density=4)"
    ]
   }
  ],
