--- a/notebooks/0.04-sources-per-region-exploration.ipynb
+++ b/notebooks/0.04-sources-per-region-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " [INFO] 2023-12-05 16:25:15.55 mni_average - __init__: Using data from SUBJECTS_DIR/MNIAverage\n",
-      " [INFO] 2023-12-05 16:25:15.55 mni_average - _set_bem: Loading boundary element model from disk | MNIAverage_bem_0.33_0.0042_0.33_ico_4\n",
-      " [INFO] 2023-12-05 16:25:15.135 mni_average - _set_vol_src: Reading volume source space from disk\n"
+      " [INFO] 2023-12-05 18:27:22.915 mni_average - __init__: Using data from SUBJECTS_DIR/MNIAverage\n",
+      " [INFO] 2023-12-05 18:27:22.915 mni_average - _set_bem: Loading boundary element model from disk | MNIAverage_bem_0.33_0.0042_0.33_ico_4\n",
+      " [INFO] 2023-12-05 18:27:22.989 mni_average - _set_vol_src: Reading volume source space from disk\n"
      ]
     },
     {
@@ -225,7 +225,7 @@
        "[104 rows x 6 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,19 +247,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x7f4e397d2b90>,\n",
-       "  <matplotlib.patches.Wedge at 0x7f4e397d2050>],\n",
+       "([<matplotlib.patches.Wedge at 0x7f6886ea5120>,\n",
+       "  <matplotlib.patches.Wedge at 0x7f6886ea5060>],\n",
        " [Text(-0.3655903556118915, 1.0374698510721025, 'Cortical (N=62)'),\n",
        "  Text(0.3655904527468272, -1.037469816843059, 'Non-cortical (N=40)')])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        " <Axes3D: xlabel='X (R)', ylabel='Y (A)', zlabel='Z (S)'>)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "dict_keys([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,14 +415,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source space n points: (16426, 3)\n"
+      "Source space n points: (13251, 3)\n"
      ]
     },
     {
@@ -433,7 +433,7 @@
        "        [<Axes: xlabel='X', ylabel='Y'>, <Axes: >]], dtype=object))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,16 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(16426, 3)"
+       "(13251, 3)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,8 +470,28 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " [INFO] 2023-12-05 18:50:50.77 mni_average - __init__: Using data from SUBJECTS_DIR/MNIAverage\n",
+      " [INFO] 2023-12-05 18:50:50.78 mni_average - _set_bem: Loading boundary element model from disk | MNIAverage_bem_0.33_0.0042_0.33_ico_4\n",
+      " [INFO] 2023-12-05 18:50:50.155 mni_average - _set_vol_src: Generating volume source space...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Write a source space...\n",
+      "    [done]\n",
+      "    1 source spaces written\n"
+     ]
+    }
+   ],
    "source": [
+    "cerebra = CerebrA()\n",
     "plt.close(\"all\")\n",
     "\n",
     "region_ids = np.array([cerebra.get_region_id_from_point(pt) for pt in cerebra.get_src_space_pc()])\n",
@@ -515,6 +535,101 @@
     "geom = mngr.window.geometry()\n",
     "x,y,dx,dy = geom.getRect()\n",
     "mngr.window.setGeometry(2600, 00, dx, dy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<Figure size 1500x1500 with 4 Axes>,\n",
+       " array([[<Axes: xlabel='Y', ylabel='Z'>, <Axes: xlabel='X', ylabel='Z'>],\n",
+       "        [<Axes: xlabel='X', ylabel='Y'>, <Axes: >]], dtype=object))"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cerebra.orthoview(plot_affine=False, plot_whitematter=True,plot_regions=False, plot_src_space=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<Figure size 640x480 with 1 Axes>,\n",
+       " <Axes3D: xlabel='X (R)', ylabel='Y (A)', zlabel='Z (S)'>)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cerebra.plot_3d(plot_src_space=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SourceSpaces: [<volume, shape=(33, 40, 35), n_used=19842>] MRI (surface RAS) coords, subject 'MNIAverage', ~11.7 MB>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cerebra.mni_average.vol_src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "modify_src_space(cerebra.mni_average.vol_src)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<Figure size 1500x1500 with 4 Axes>,\n",
+       " array([[<Axes: xlabel='Y', ylabel='Z'>, <Axes: xlabel='X', ylabel='Z'>],\n",
+       "        [<Axes: xlabel='X', ylabel='Y'>, <Axes: >]], dtype=object))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cerebra.orthoview(plot_affine=False, plot_whitematter=True,plot_regions=False, plot_src_space=True)"
    ]
   }
  ],
